<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginRight="-8dp"
        android:background="@drawable/ic_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/textView3"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/formCardView"
                android:layout_width="match_parent"
                android:layout_height="594dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="582dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="32dp">

                    <TextView
                        android:id="@+id/descripcionTextView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/name_form"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/descripcionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/descripcionTextView2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="20dp"
                        android:autofillHints="@string/app_name"
                        android:background="@drawable/ic_field"
                        android:ems="80"
                        android:hint="@string/name_form"
                        android:inputType="textAutoComplete"
                        android:paddingLeft="20dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp" />

                    <EditText
                        android:id="@+id/categoriaEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/categoriaTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_toStartOf="@+id/urlEditText"
                        android:layout_toLeftOf="@+id/urlEditText"
                        android:autofillHints="Categoria"
                        android:background="@drawable/ic_field"
                        android:ems="3"
                        android:hint="@string/categoria_form"
                        android:inputType="text"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/categoriaTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/descripcionEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_toStartOf="@+id/urlTextView"
                        android:layout_toLeftOf="@+id/urlTextView"
                        android:text="@string/categoria_form"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/urlEditText"
                        android:layout_width="72dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/urlTextView"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:autofillHints="@string/url_form"
                        android:background="@drawable/ic_field"
                        android:ems="10"
                        android:hint="@string/url_form"
                        android:inputType="number"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/urlTextView"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/descripcionEditText"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/url_form"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/precioEditText"
                        android:layout_width="355dp"
                        android:layout_height="54dp"
                        android:layout_below="@+id/descriptionTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="244dp"
                        android:autofillHints="@string/precio_form"
                        android:background="@drawable/ic_field"
                        android:ems="255"
                        android:gravity="clip_vertical"
                        android:hint="@string/precio_form"
                        android:inputType="numberDecimal"
                        android:lines="8"
                        android:maxLines="16"
                        android:minLines="8"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <EditText
                        android:id="@+id/stockEditText"
                        android:layout_width="273dp"
                        android:layout_height="58dp"
                        android:layout_below="@+id/descriptionTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="70dp"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="123dp"
                        android:layout_marginEnd="53dp"
                        android:layout_marginRight="53dp"
                        android:layout_marginBottom="135dp"
                        android:autofillHints="@string/precio_form"
                        android:background="@drawable/ic_field"
                        android:ems="255"
                        android:gravity="clip_vertical"
                        android:hint="@string/stock_form"
                        android:inputType="number"
                        android:lines="8"
                        android:maxLines="16"
                        android:minLines="8"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/categoriaEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/precio_form"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/stockTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/categoriaEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="125dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/stock_form"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/productButton"
                        android:layout_width="wrap_content"
                        android:layout_height="53dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="90dp"
                        android:layout_marginLeft="90dp"
                        android:layout_marginEnd="65dp"
                        android:layout_marginRight="65dp"
                        android:layout_marginBottom="14dp"
                        android:background="@drawable/ic_btn"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>